# vscode-motoko

./: .eslintrc  .gitignore  .gitmodules  .prettierignore  .prettierrc  .vscodeignore  CHANGELOG.md  Development.md  README.md  default.nix  jest.config.js  jest.custom-matchers.d.ts  jest.setup.ts  language-configuration.json  node-packages.nix  package-lock.json  package.json  package.nix  snippets.json  supplement.json  supplement.nix  tsconfig.json  update-deps.sh  vsmarketplace-proof.txt
.github/: CODEOWNERS
.github/workflows/: release.yml  tests.yml
guide/workspace/: .gitignore  .gitpod.yml  MyCanister.mo  dfx.json
rust/: Cargo.toml  package-lock.json  package.json
rust/src/: lib.rs
scripts/: generate.js
src/: browser.ts  extension.ts  formatter.ts  jest.custom-matchers.d.ts  jest.setup.ts  server.ts  utils.ts
src/candid/: aaaaa-aa.did.ts
src/common/: connectionTypes.ts  requestConfig.ts  testConfig.ts  watchConfig.ts
src/server/: ast.ts  astProvider.ts  candidAddressProvider.ts  canisterNames.ts  connection.ts  context.spec.ts  context.ts  definition.spec.ts  depgraph.ts  deployer.ts  dfx.ts  formatter.ts  globals.ts  handlers.ts  importCache.ts  importProvider.ts  imports.ts  information.ts  mops.ts  motoko.spec.ts  motoko.ts  navigation.ts  playground.spec.ts  playground.ts  preprocessMotoko.ts  program.ts  references.spec.ts  replicaManager.ts  rust.spec.ts  rust.ts  server.spec.ts  server.ts  (+7 more)
syntaxes/: Candid.tmLanguage  Major.tmLanguage
tests/: program.test.ts
themes/: FormalMotoko.tmTheme
utils/: downloadBaseLibrary.js  generate.js
(+85 files in other folders)
