[package]
name = "rust"
version = "0.0.0"
authors = ["DFINITY Foundation"]
license = "Apache-2.0"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vessel = { git = "https://github.com/dfinity/vessel" }
neon-serde3 = "0.10.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
